--- a/commercial-auth.html
+++ b/commercial-auth.html
@@ -1,33 +1,21 @@
 <!doctype html>
-<html lang="pt-BR"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Premium</title>
+<html lang="pt-BR"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Login Premium</title>
 <style>
 body{margin:0;background:#0b1020;color:#e8edff;font-family:Inter,Segoe UI,Arial;padding:20px}
 .card{background:#121a33;border:1px solid #2b3d72;border-radius:14px;padding:14px;max-width:760px}
 input{width:100%;padding:9px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
 button,a.btn{background:#1b2d5e;color:#fff;border:1px solid #3d58a6;border-radius:9px;padding:8px 12px;cursor:pointer;text-decoration:none;display:inline-flex;align-items:center}
 .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}.muted{color:#9aa7d8}
-.badge{display:inline-block;padding:3px 9px;border-radius:999px;font-size:.82rem}
-.ok{background:rgba(53,208,127,.2);color:#98f0be}.warn{background:rgba(255,204,102,.2);color:#ffd97c}
 </style></head><body>
-<h1 style="margin-top:0">Cadastro/Login Premium</h1>
+<h1 style="margin-top:0">Login Premium</h1>
 <div class="card">
-  <div class="muted"><strong>Fluxo:</strong> 1) Assinar no Mercado Pago → 2) Confirmar pagamento → 3) Criar senha (contra senha) → 4) Login.</div>
-
-  <div class="row" style="margin-top:10px;">
-    <a class="btn" target="_blank" rel="noopener noreferrer" href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=358e53cb7ce64ca088f82c94f82bf508">1) Assinar Premium (Mercado Pago)</a>
-    <a class="btn" href="commercial-payment-approved.html">2) Já paguei / Confirmar pagamento</a>
-    <span id="payState" class="badge warn">Pagamento não confirmado</span>
-  </div>
-
-  <hr style="border:none;border-top:1px solid #2b3d72;margin:14px 0;"/>
-
-  <div class="muted">Etapa 3: crie sua senha após pagamento confirmado.</div>
+  <div class="muted">Entre com e-mail e senha. Se você ainda não tem cadastro premium, será direcionado para o pagamento.</div>
   <input id="email" placeholder="E-mail"/>
-  <input id="pass" type="password" placeholder="Senha (mínimo 6 caracteres)"/>
+  <input id="pass" type="password" placeholder="Senha"/>
 
   <div class="row" style="margin-top:10px;">
-    <button id="register">3) Cadastrar e gerar contra senha</button>
     <button id="login">Entrar</button>
+    <a class="btn" id="payBtn" href="commercial-premium-payment.html">Ainda não tenho cadastro premium</a>
     <button onclick="location.href='commercial-dashboard.html'">Voltar</button>
   </div>
   <div id="status" class="muted" style="margin-top:10px;"></div>
@@ -37,35 +25,18 @@ const API_HOST = (!location.hostname || ['localhost','127.0.0.1'].includes(locat
 const API_PROTO = location.protocol === 'file:' ? 'http:' : location.protocol;
 const API = `${API_PROTO}//${API_HOST}:8001`;
 const statusEl=document.getElementById('status');
-statusEl.textContent = `Conectando em: ${API}`;
 
 const emailEl=document.getElementById('email');
 const passEl=document.getElementById('pass');
-const payStateEl=document.getElementById('payState');
 const params = new URLSearchParams(location.search);
 emailEl.value = params.get('email') || '';
 
-function paidRecord(){
-  try { return JSON.parse(localStorage.getItem('bitdash_paid_record')||'null'); } catch { return null; }
+function syncPayLink(){
+  const email = encodeURIComponent(emailEl.value.trim().toLowerCase());
+  document.getElementById('payBtn').href = `commercial-premium-payment.html?email=${email}`;
 }
-
-function hasValidPayment(email){
-  const rec = paidRecord();
-  if (!rec || !rec.email || !rec.ts) return false;
-  if (String(rec.email).toLowerCase() !== String(email||'').toLowerCase()) return false;
-  const maxAgeMs = 24 * 60 * 60 * 1000; // 24h para concluir cadastro
-  return (Date.now() - Number(rec.ts)) <= maxAgeMs;
-}
-
-function refreshPayState(){
-  const email = emailEl.value.trim().toLowerCase();
-  const ok = hasValidPayment(email);
-  payStateEl.textContent = ok ? 'Pagamento confirmado' : 'Pagamento não confirmado';
-  payStateEl.className = `badge ${ok ? 'ok' : 'warn'}`;
-}
-
-emailEl.addEventListener('input', refreshPayState);
-refreshPayState();
+emailEl.addEventListener('input', syncPayLink);
+syncPayLink();
 
 async function api(path, method='GET', body){
   try {
@@ -80,12 +51,6 @@ async function api(path, method='GET', body){
     return j;
   } catch (e) {
     const users = JSON.parse(localStorage.getItem('bitdash_users')||'{}');
-    if (path==='/auth/register' && method==='POST') {
-      const code = String(Math.floor(100000 + Math.random()*900000));
-      users[body.email] = { password: body.password, verified: false, code };
-      localStorage.setItem('bitdash_users', JSON.stringify(users));
-      return { ok:true, devCode: code };
-    }
     if (path==='/auth/login' && method==='POST') {
       const u = users[body.email];
       if (!u) throw new Error('invalid_credentials');
@@ -98,29 +63,27 @@ async function api(path, method='GET', body){
   }
 }
 
-document.getElementById('register').onclick = async ()=>{
-  const email=emailEl.value.trim().toLowerCase();
-  const password=passEl.value;
-  if(!email || password.length<6){ statusEl.textContent='Preencha e-mail e senha válida.'; return; }
-  if(!hasValidPayment(email)){
-    statusEl.textContent='Pagamento não confirmado para este e-mail. Faça a assinatura e confirme na página de pagamento aprovado.';
-    refreshPayState();
-    return;
-  }
-  try{
-    const j = await api('/auth/register','POST',{email,password});
-    location.href = `commercial-verify.html?email=${encodeURIComponent(email)}&devCode=${encodeURIComponent(j.devCode||'')}`;
-  }catch(e){ statusEl.textContent = `Erro no cadastro: ${e.message}`; }
-};
-
 document.getElementById('login').onclick = async ()=>{
   const email=emailEl.value.trim().toLowerCase();
   const password=passEl.value;
+  if(!email || !password){ statusEl.textContent='Preencha e-mail e senha.'; return; }
   try{
     await api('/auth/login','POST',{email,password});
     statusEl.textContent = 'Login OK. Redirecionando...';
-    setTimeout(()=>location.href='commercial-dashboard.html',700);
-  }catch(e){ statusEl.textContent = `Erro no login: ${e.message}`; }
+    setTimeout(()=>location.href='commercial-dashboard.html',600);
+  }catch(e){
+    if (String(e.message).includes('invalid_credentials')) {
+      statusEl.textContent = 'Usuário não cadastrado premium. Redirecionando para pagamento...';
+      setTimeout(()=>location.href=`commercial-premium-payment.html?email=${encodeURIComponent(email)}`,700);
+      return;
+    }
+    if (String(e.message).includes('email_not_verified')) {
+      statusEl.textContent = 'E-mail ainda não validado. Abra a tela de confirmação.';
+      setTimeout(()=>location.href=`commercial-verify.html?email=${encodeURIComponent(email)}`,700);
+      return;
+    }
+    statusEl.textContent = `Erro no login: ${e.message}`;
+  }
 };
 </script>
 </body></html>
