--- a/commercial-payment-approved.html
+++ b/commercial-payment-approved.html
@@ -3,69 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento Aprovado - Bitdash</title>
+  <title>Pagamento Aprovado - Cadastro Premium</title>
   <style>
-    :root { --bg:#0b1020; --card:#121a33; --text:#e8ecff; --muted:#9aa7d8; --ok:#35d07f; --line:#233565; --btn:#1a2a57; --btnLine:#3552a3; }
+    :root { --bg:#0b1020; --card:#121a33; --text:#e8ecff; --muted:#9aa7d8; --line:#233565; --btn:#1a2a57; --btnLine:#3552a3; }
     *{box-sizing:border-box}
     body{margin:0;min-height:100vh;display:grid;place-items:center;background:linear-gradient(180deg,#0b1020,#0d1328);color:var(--text);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;padding:20px}
-    .card{width:100%;max-width:760px;background:var(--card);border:1px solid var(--line);border-radius:16px;padding:24px;box-shadow:0 10px 35px rgba(0,0,0,.35)}
-    .ok-badge{display:inline-flex;align-items:center;gap:8px;padding:6px 12px;border-radius:999px;background:rgba(53,208,127,.16);color:#9cf3c2;font-weight:700;margin-bottom:12px}
-    h1{margin:0 0 10px;font-size:1.9rem} p{margin:0 0 10px;color:var(--muted);line-height:1.45}
-    .box{margin-top:16px;border:1px solid var(--line);border-radius:12px;padding:12px;background:rgba(16,27,56,.35)}
-    .row{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px;align-items:center}
+    .card{width:100%;max-width:760px;background:var(--card);border:1px solid var(--line);border-radius:16px;padding:24px}
+    .ok{display:inline-block;background:rgba(53,208,127,.16);color:#9cf3c2;padding:5px 10px;border-radius:999px;font-weight:700;margin-bottom:8px}
+    .muted{color:var(--muted)}
     input{width:100%;padding:9px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
-    button,a.btn{appearance:none;text-decoration:none;background:var(--btn);color:var(--text);border:1px solid var(--btnLine);border-radius:10px;padding:9px 14px;cursor:pointer;font-weight:600;display:inline-flex;align-items:center;justify-content:center}
+    .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:10px}
+    button,a.btn{appearance:none;text-decoration:none;background:var(--btn);color:var(--text);border:1px solid var(--btnLine);border-radius:10px;padding:9px 14px;cursor:pointer;font-weight:600;display:inline-flex;align-items:center}
     .ghost{background:transparent;border-color:#3a4f96}
-    .small{font-size:.9rem;color:var(--muted);margin-top:14px}
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="ok-badge">✅ Pagamento aprovado</div>
-    <h1>Ativar pagamento para liberar cadastro</h1>
-    <p>Após concluir a assinatura no Mercado Pago, confirme aqui o mesmo e-mail usado no pagamento.</p>
+    <div class="ok">✅ Pagamento aprovado</div>
+    <h1 style="margin-top:0">Criar cadastro premium</h1>
+    <p class="muted">Agora crie e-mail e senha. Em produção, a contra senha será enviada por e-mail. Por enquanto, vamos simular mostrando na tela.</p>
 
-    <div class="box">
-      <strong>Confirmação de pagamento (fluxo local)</strong>
-      <input id="email" placeholder="Digite o e-mail usado no pagamento" />
-      <div class="row">
-        <button id="activateBtn">Ativar pagamento e ir para cadastro</button>
-        <a class="btn ghost" target="_blank" rel="noopener noreferrer" href="https://www.mercadopago.com.br/subscriptions/checkout?preapproval_plan_id=358e53cb7ce64ca088f82c94f82bf508">Voltar ao checkout Mercado Pago</a>
-      </div>
-      <div id="status" class="small"></div>
-    </div>
-
+    <input id="email" placeholder="E-mail" />
+    <input id="pass" type="password" placeholder="Senha (mínimo 6 caracteres)" />
     <div class="row">
-      <a class="btn ghost" href="commercial-dashboard.html">Ir para o Dashboard</a>
-      <a class="btn ghost" href="commercial-auth.html">Ir para Login Premium</a>
+      <button id="registerBtn">Cadastrar e gerar contra senha</button>
+      <a class="btn ghost" href="commercial-auth.html">Voltar ao Login</a>
     </div>
-
-    <div class="small">Bitdash • build payment-approved-v2</div>
+    <p id="status" class="muted"></p>
   </div>
 
 <script>
+const API_HOST = (!location.hostname || ['localhost','127.0.0.1'].includes(location.hostname)) ? '192.168.1.105' : location.hostname;
+const API_PROTO = location.protocol === 'file:' ? 'http:' : location.protocol;
+const API = `${API_PROTO}//${API_HOST}:8001`;
+
 const emailEl = document.getElementById('email');
+const passEl = document.getElementById('pass');
 const statusEl = document.getElementById('status');
+const params = new URLSearchParams(location.search);
+emailEl.value = params.get('email') || '';
 
-try {
-  const rec = JSON.parse(localStorage.getItem('bitdash_paid_record')||'null');
-  if (rec?.email) emailEl.value = rec.email;
-} catch {}
+function paymentOkForEmail(email){
+  try {
+    const rec = JSON.parse(localStorage.getItem('bitdash_paid_record')||'null');
+    if (!rec?.email || !rec?.ts) return false;
+    if (String(rec.email).toLowerCase() !== String(email).toLowerCase()) return false;
+    return (Date.now() - Number(rec.ts)) <= (24*60*60*1000);
+  } catch { return false; }
+}
 
-document.getElementById('activateBtn').onclick = () => {
-  const email = String(emailEl.value || '').trim().toLowerCase();
-  if (!email || !email.includes('@')) {
-    statusEl.textContent = 'Informe um e-mail válido.';
+async function api(path, method='GET', body){
+  try {
+    const r = await fetch(API+path, {
+      method,
+      headers: {'Content-Type':'application/json'},
+      credentials: 'include',
+      body: body ? JSON.stringify(body) : undefined,
+    });
+    let j={}; try{ j=await r.json(); }catch{}
+    if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
+    return j;
+  } catch (e) {
+    const users = JSON.parse(localStorage.getItem('bitdash_users')||'{}');
+    if (path==='/auth/register' && method==='POST') {
+      const code = String(Math.floor(100000 + Math.random()*900000));
+      users[body.email] = { password: body.password, verified: false, code };
+      localStorage.setItem('bitdash_users', JSON.stringify(users));
+      return { ok:true, devCode: code };
+    }
+    throw e;
+  }
+}
+
+document.getElementById('registerBtn').onclick = async ()=>{
+  const email = String(emailEl.value||'').trim().toLowerCase();
+  const password = String(passEl.value||'');
+  if (!email || !email.includes('@') || password.length < 6) {
+    statusEl.textContent = 'Preencha e-mail válido e senha com mínimo 6 caracteres.';
+    return;
+  }
+  if (!paymentOkForEmail(email)) {
+    statusEl.textContent = 'Pagamento não confirmado para este e-mail. Volte para a etapa de pagamento.';
     return;
   }
 
-  const rec = { email, ts: Date.now(), source: 'mercadopago_link_manual_confirm' };
-  localStorage.setItem('bitdash_paid_record', JSON.stringify(rec));
-  statusEl.textContent = 'Pagamento confirmado para este e-mail. Redirecionando...';
-
-  setTimeout(() => {
-    location.href = `commercial-auth.html?email=${encodeURIComponent(email)}&paid=1`;
-  }, 500);
+  try {
+    const j = await api('/auth/register', 'POST', { email, password });
+    location.href = `commercial-verify.html?email=${encodeURIComponent(email)}&devCode=${encodeURIComponent(j.devCode||'')}`;
+  } catch (e) {
+    statusEl.textContent = `Erro no cadastro: ${e.message}`;
+  }
 };
 </script>
 </body>
