--- a/commercial-auth.html
+++ b/commercial-auth.html
@@ -1,42 +1,55 @@
 <!doctype html>
-<html lang="pt-BR"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Login Premium</title>
-<style>
-body{margin:0;background:#0b1020;color:#e8edff;font-family:Inter,Segoe UI,Arial;padding:20px}
-.card{background:#121a33;border:1px solid #2b3d72;border-radius:14px;padding:14px;max-width:760px}
-input{width:100%;padding:9px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
-button,a.btn{background:#1b2d5e;color:#fff;border:1px solid #3d58a6;border-radius:9px;padding:8px 12px;cursor:pointer;text-decoration:none;display:inline-flex;align-items:center}
-.row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}.muted{color:#9aa7d8}
-</style></head><body>
-<h1 style="margin-top:0">Login Premium</h1>
-<div class="card">
-  <div class="muted">Entre com e-mail e senha. Se você ainda não tem cadastro premium, será direcionado para o pagamento.</div>
-  <input id="email" placeholder="E-mail"/>
-  <input id="pass" type="password" placeholder="Senha"/>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Login Premium</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <style>
+    :root{--bg:#0b1020;--card:#121a33;--text:#e8edff;--muted:#9aa7d8;--line:#2b3d72;--btn:#1b2d5e;--btnLine:#3d58a6}
+    *{box-sizing:border-box}
+    body{margin:0;min-height:100vh;display:grid;place-items:center;background:linear-gradient(180deg,#0b1020,#0d1328);color:var(--text);font-family:Inter,Segoe UI,Arial;padding:20px}
+    .card{width:100%;max-width:760px;background:var(--card);border:1px solid var(--line);border-radius:14px;padding:20px}
+    h1{margin-top:0}
+    .muted{color:var(--muted)}
+    input{width:100%;padding:10px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
+    .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:10px}
+    .sep{margin:12px 0;color:#8ca0de;font-size:.9rem;display:flex;align-items:center;gap:10px}
+    .sep::before,.sep::after{content:'';flex:1;height:1px;background:#2d3f74}
+    #googleWrap{display:flex;justify-content:center;min-height:42px}
+    button,a.btn{background:var(--btn);color:#fff;border:1px solid var(--btnLine);border-radius:9px;padding:9px 12px;cursor:pointer;text-decoration:none;display:inline-flex;align-items:center}
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Login Premium</h1>
+    <div class="muted">Se já for cadastrado, entra direto. Se não for, o acesso é bloqueado e você segue para o pagamento.</div>
 
-  <div class="row" style="margin-top:10px;">
-    <button id="login">Entrar</button>
-    <a class="btn" id="payBtn" href="commercial-premium-payment.html">Ainda não tenho cadastro premium</a>
-    <button onclick="location.href='commercial-dashboard.html'">Voltar</button>
+    <input id="email" placeholder="E-mail"/>
+    <input id="pass" type="password" placeholder="Senha"/>
+
+    <div class="row">
+      <button id="login">Entrar</button>
+      <button onclick="location.href='commercial-dashboard.html'">Voltar</button>
+    </div>
+
+    <div class="sep">ou</div>
+    <div id="googleWrap"></div>
+
+    <div id="status" class="muted" style="margin-top:10px;"></div>
   </div>
-  <div id="status" class="muted" style="margin-top:10px;"></div>
-</div>
+
 <script>
 const API_HOST = (!location.hostname || ['localhost','127.0.0.1'].includes(location.hostname)) ? '192.168.1.105' : location.hostname;
 const API_PROTO = location.protocol === 'file:' ? 'http:' : location.protocol;
 const API = `${API_PROTO}//${API_HOST}:8001`;
-const statusEl=document.getElementById('status');
+const GOOGLE_CLIENT_ID = '90657228527-vg76ohma7rj6pkpc7p9sk4spk13dlbc1.apps.googleusercontent.com'; // Client ID Web do Google Cloud
 
-const emailEl=document.getElementById('email');
-const passEl=document.getElementById('pass');
+const statusEl = document.getElementById('status');
+const emailEl = document.getElementById('email');
+const passEl = document.getElementById('pass');
 const params = new URLSearchParams(location.search);
 emailEl.value = params.get('email') || '';
-
-function syncPayLink(){
-  const email = encodeURIComponent(emailEl.value.trim().toLowerCase());
-  document.getElementById('payBtn').href = `commercial-premium-payment.html?email=${email}`;
-}
-emailEl.addEventListener('input', syncPayLink);
-syncPayLink();
 
 async function api(path, method='GET', body){
   try {
@@ -63,27 +76,83 @@ async function api(path, method='GET', body){
   }
 }
 
+async function checkExistingLogin(){
+  try {
+    await api('/auth/me');
+    location.href = 'commercial-dashboard.html';
+  } catch {}
+}
+
+async function loginWithGoogleCredential(credential){
+  try {
+    const j = await api('/auth/google','POST',{ credential });
+    if (j?.user?.email) localStorage.setItem('bitdash_local_user', j.user.email);
+    statusEl.textContent = 'Login Google OK. Redirecionando...';
+    setTimeout(()=>location.href='commercial-dashboard.html', 500);
+  } catch (e) {
+    statusEl.textContent = `Google login falhou: ${e.message}`;
+  }
+}
+
+function initGoogleLogin(){
+  const wrap = document.getElementById('googleWrap');
+  if (!GOOGLE_CLIENT_ID) {
+    wrap.innerHTML = '<span class="muted">Login Google aguardando configuração do Client ID.</span>';
+    return;
+  }
+  if (!window.google?.accounts?.id) {
+    wrap.innerHTML = '<span class="muted">SDK do Google não carregou.</span>';
+    return;
+  }
+
+  window.google.accounts.id.initialize({
+    client_id: GOOGLE_CLIENT_ID,
+    auto_select: true,
+    callback: (resp) => loginWithGoogleCredential(resp.credential),
+  });
+
+  window.google.accounts.id.renderButton(wrap, {
+    type: 'standard',
+    theme: 'outline',
+    size: 'large',
+    text: 'signin_with',
+    shape: 'pill',
+  });
+
+  // tenta usar a conta Google já logada no dispositivo
+  window.google.accounts.id.prompt();
+}
+
 document.getElementById('login').onclick = async ()=>{
-  const email=emailEl.value.trim().toLowerCase();
-  const password=passEl.value;
+  const email = emailEl.value.trim().toLowerCase();
+  const password = passEl.value;
   if(!email || !password){ statusEl.textContent='Preencha e-mail e senha.'; return; }
+
   try{
     await api('/auth/login','POST',{email,password});
     statusEl.textContent = 'Login OK. Redirecionando...';
     setTimeout(()=>location.href='commercial-dashboard.html',600);
   }catch(e){
-    if (String(e.message).includes('invalid_credentials')) {
-      statusEl.textContent = 'Usuário não cadastrado premium. Redirecionando para pagamento...';
-      setTimeout(()=>location.href=`commercial-premium-payment.html?email=${encodeURIComponent(email)}`,700);
+    const msg = String(e.message || '');
+
+    if (msg.includes('invalid_credentials')) {
+      sessionStorage.setItem('bitdash_pending_auth', JSON.stringify({ email, password, ts: Date.now() }));
+      statusEl.textContent = 'Usuário não cadastrado. Acesso bloqueado. Redirecionando para pagamento...';
+      setTimeout(()=>location.href=`commercial-premium-payment.html?email=${encodeURIComponent(email)}`,800);
       return;
     }
-    if (String(e.message).includes('email_not_verified')) {
-      statusEl.textContent = 'E-mail ainda não validado. Abra a tela de confirmação.';
-      setTimeout(()=>location.href=`commercial-verify.html?email=${encodeURIComponent(email)}`,700);
+
+    if (msg.includes('email_not_verified')) {
+      statusEl.textContent = 'Cadastro encontrado, mas ainda não confirmado.';
       return;
     }
+
     statusEl.textContent = `Erro no login: ${e.message}`;
   }
 };
+
+checkExistingLogin();
+initGoogleLogin();
 </script>
-</body></html>
+</body>
+</html>
