--- a/commercial-payment-approved.html
+++ b/commercial-payment-approved.html
@@ -3,95 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento Aprovado - Cadastro Premium</title>
+  <title>Validar Contra Senha - Bitdash</title>
   <style>
     :root { --bg:#0b1020; --card:#121a33; --text:#e8ecff; --muted:#9aa7d8; --line:#233565; --btn:#1a2a57; --btnLine:#3552a3; }
     *{box-sizing:border-box}
     body{margin:0;min-height:100vh;display:grid;place-items:center;background:linear-gradient(180deg,#0b1020,#0d1328);color:var(--text);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;padding:20px}
     .card{width:100%;max-width:760px;background:var(--card);border:1px solid var(--line);border-radius:16px;padding:24px}
-    .ok{display:inline-block;background:rgba(53,208,127,.16);color:#9cf3c2;padding:5px 10px;border-radius:999px;font-weight:700;margin-bottom:8px}
+    h1{margin-top:0}
     .muted{color:var(--muted)}
-    input{width:100%;padding:9px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
-    .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-top:10px}
-    button,a.btn{appearance:none;text-decoration:none;background:var(--btn);color:var(--text);border:1px solid var(--btnLine);border-radius:10px;padding:9px 14px;cursor:pointer;font-weight:600;display:inline-flex;align-items:center}
-    .ghost{background:transparent;border-color:#3a4f96}
+    input{width:100%;padding:10px;margin:6px 0;border-radius:9px;border:1px solid #3a5194;background:#0f1731;color:#fff}
+    button{appearance:none;text-decoration:none;background:var(--btn);color:var(--text);border:1px solid var(--btnLine);border-radius:10px;padding:9px 14px;cursor:pointer;font-weight:600;display:inline-flex;align-items:center;margin-top:8px}
   </style>
 </head>
 <body>
   <div class="card">
-    <div class="ok">✅ Pagamento aprovado</div>
-    <h1 style="margin-top:0">Criar cadastro premium</h1>
-    <p class="muted">Agora crie e-mail e senha. Em produção, a contra senha será enviada por e-mail. Por enquanto, vamos simular mostrando na tela.</p>
+    <h1>Validar contra senha</h1>
+    <p class="muted">Informe a contra senha para liberar o cadastro premium.</p>
 
-    <input id="email" placeholder="E-mail" />
-    <input id="pass" type="password" placeholder="Senha (mínimo 6 caracteres)" />
-    <div class="row">
-      <button id="registerBtn">Cadastrar e gerar contra senha</button>
-      <a class="btn ghost" href="commercial-auth.html">Voltar ao Login</a>
-    </div>
-    <p id="status" class="muted"></p>
+    <input id="counter" placeholder="Contra senha" />
+    <button id="validateBtn">Validar</button>
+
+    <p id="status" class="muted" style="margin-top:10px"></p>
   </div>
 
 <script>
-const API_HOST = (!location.hostname || ['localhost','127.0.0.1'].includes(location.hostname)) ? '192.168.1.105' : location.hostname;
-const API_PROTO = location.protocol === 'file:' ? 'http:' : location.protocol;
-const API = `${API_PROTO}//${API_HOST}:8001`;
-
-const emailEl = document.getElementById('email');
-const passEl = document.getElementById('pass');
+const counterEl = document.getElementById('counter');
 const statusEl = document.getElementById('status');
 const params = new URLSearchParams(location.search);
-emailEl.value = params.get('email') || '';
+const email = String(params.get('email') || '').trim().toLowerCase();
 
-function paymentOkForEmail(email){
-  try {
-    const rec = JSON.parse(localStorage.getItem('bitdash_paid_record')||'null');
-    if (!rec?.email || !rec?.ts) return false;
-    if (String(rec.email).toLowerCase() !== String(email).toLowerCase()) return false;
-    return (Date.now() - Number(rec.ts)) <= (24*60*60*1000);
-  } catch { return false; }
+function completeRegistration(email){
+  const users = JSON.parse(localStorage.getItem('bitdash_users') || '{}');
+  const pending = JSON.parse(sessionStorage.getItem('bitdash_pending_auth') || 'null');
+
+  const map = JSON.parse(localStorage.getItem('bitdash_counterpass_map') || '{}');
+  const reg = map[email] || {};
+  const password = reg.password || (pending && pending.email === email ? pending.password : null);
+
+  if (!password) {
+    throw new Error('missing_pending_password');
+  }
+
+  users[email] = { password, verified: true, createdAt: Date.now() };
+  localStorage.setItem('bitdash_users', JSON.stringify(users));
+  localStorage.setItem('bitdash_local_user', email);
+
+  delete map[email];
+  localStorage.setItem('bitdash_counterpass_map', JSON.stringify(map));
+  sessionStorage.removeItem('bitdash_pending_auth');
 }
 
-async function api(path, method='GET', body){
+document.getElementById('validateBtn').onclick = ()=>{
+  if (!email || !email.includes('@')) {
+    statusEl.textContent = 'E-mail inválido no fluxo. Volte ao login.';
+    return;
+  }
+
+  const typed = String(counterEl.value || '').trim();
+  if (!typed) {
+    statusEl.textContent = 'Informe a contra senha.';
+    return;
+  }
+
+  const map = JSON.parse(localStorage.getItem('bitdash_counterpass_map') || '{}');
+  const reg = map[email];
+
+  if (!reg || !reg.code) {
+    statusEl.textContent = 'Contra senha não encontrada. Refaça o pagamento.';
+    return;
+  }
+
+  if (typed !== String(reg.code)) {
+    statusEl.textContent = 'Contra senha inválida.';
+    return;
+  }
+
   try {
-    const r = await fetch(API+path, {
-      method,
-      headers: {'Content-Type':'application/json'},
-      credentials: 'include',
-      body: body ? JSON.stringify(body) : undefined,
-    });
-    let j={}; try{ j=await r.json(); }catch{}
-    if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
-    return j;
+    completeRegistration(email);
+    statusEl.textContent = 'Contra senha válida. Cadastro liberado. Voltando ao login...';
+    setTimeout(() => {
+      location.href = `commercial-auth.html?email=${encodeURIComponent(email)}`;
+    }, 800);
   } catch (e) {
-    const users = JSON.parse(localStorage.getItem('bitdash_users')||'{}');
-    if (path==='/auth/register' && method==='POST') {
-      const code = String(Math.floor(100000 + Math.random()*900000));
-      users[body.email] = { password: body.password, verified: false, code };
-      localStorage.setItem('bitdash_users', JSON.stringify(users));
-      return { ok:true, devCode: code };
+    if (String(e.message).includes('missing_pending_password')) {
+      statusEl.textContent = 'Senha original não encontrada. Recomece pelo login para registrar sua senha.';
+      return;
     }
-    throw e;
-  }
-}
-
-document.getElementById('registerBtn').onclick = async ()=>{
-  const email = String(emailEl.value||'').trim().toLowerCase();
-  const password = String(passEl.value||'');
-  if (!email || !email.includes('@') || password.length < 6) {
-    statusEl.textContent = 'Preencha e-mail válido e senha com mínimo 6 caracteres.';
-    return;
-  }
-  if (!paymentOkForEmail(email)) {
-    statusEl.textContent = 'Pagamento não confirmado para este e-mail. Volte para a etapa de pagamento.';
-    return;
-  }
-
-  try {
-    const j = await api('/auth/register', 'POST', { email, password });
-    location.href = `commercial-verify.html?email=${encodeURIComponent(email)}&devCode=${encodeURIComponent(j.devCode||'')}`;
-  } catch (e) {
-    statusEl.textContent = `Erro no cadastro: ${e.message}`;
+    statusEl.textContent = `Erro: ${e.message}`;
   }
 };
 </script>
