--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="topbar">
     <div>
-      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable2</span></h1>
+      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable3</span></h1>
       <div class="muted">Visualize, entenda, decida!</div>
     </div>
     <div class="actions">
@@ -404,7 +404,9 @@ const priceRef = {
   VISC11: 108.0, KNRI11: 151.0, BBAS3: 31.0, VALE3: 55.0,
   IRIM11: 64.7, RZTR11: 96.8, KNCA11: 96.6, BRCO11: 117.9,
   VILG11: 86.5, XPLG11: 101.2, BTLG11: 103.4, HGRU11: 120.0,
-  HGBS11: 188.0, CPTS11: 8.9, KDIF11: 100.5
+  HGBS11: 188.0, CPTS11: 8.9, KDIF11: 100.5,
+  ITUB4: 36.0, ABEV3: 13.2, EGIE3: 43.5, VBBR3: 23.0, B3SA3: 12.7,
+  KLBN11: 21.5, KNIP11: 95.0, XPML11: 103.0, KNCR11: 103.5, IRDM11: 76.0
 };
 const usdRef = {BTC:98000, ETH:3200, SOL:180, XRP:0.6, BNB:650, ADA:0.8, DOGE:0.12, LTC:90, USDT:1};
 
